--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('./partials/head.ejs')  %>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <%- include('./partials/nav.ejs')  %>
     <div class="blogs content container">
         <h2>All Blogs</h2>
