--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    height: 100vh !important;
+}
 
 .navbar-brand{
         color: white;
@@ -50,8 +53,8 @@ nav{
 .single-blog>p:hover{
     cursor: default;
 }
-.create{
-    width:70% !important;
-    position: relative;
+
+.content{
+    width: 60%;
     margin: 0 auto;
 }
